- use of Picasso.show
- add covex primitive in parser 
- add Dom, Expr and Constraint modules
- add .opam for library
- add examples using library
- massive documentation of library
- split sources into lib + solver
- remove vpl dependency
- parsers cleaning

v0.1 (21 Oct 2020)