@@ -5,14 +5,13 @@
 absolute: build
 	@cp ./_build/default/absolute-solver/absolute.exe absolute
 
+# The following target is for AbSolute's developpers.
+# You should have memtrace, memtrace-viewer and landmarks installed
 memabsolute:
 	@mv lib/dune lib/dune.tmp
 	@echo "(include_subdirs unqualified)\n(library (public_name libabsolute) (name libabsolute)\
  (libraries bigarray gmp apron apron.polkaMPQ apron.octD apron.boxMPQ apronext picasso landmarks)\
- (preprocess (pps landmarks.ppx --auto))\
- (foreign_stubs\
-  (language c)\
-  (names ml_float)))" > lib/dune;
+ (preprocess (pps landmarks.ppx --auto)) (foreign_stubs (language c) (names ml_float)))" > lib/dune;
 	dune build absolute-solver/memabsolute.exe
 	@mv lib/dune.tmp lib/dune
 	@echo "OCAML_LANDMARKS=on,output=timeperf.json,format=json MEMTRACE=memperf.ctf ./_build/default/absolute-solver/memabsolute.exe \$$@" > memabsolute;
@@ -28,7 +27,6 @@ memabsolute:
 	@echo "     esac" >> memabsolute;
 	@echo ")" >> memabsolute;
 	@chmod +x memabsolute
-
 
 default: build doc
 
